Version 4.1 - User avatar
Updated registration and admin methods to work with user avatar
